feat: refactor custom user for starter